# GoogleRecaptchaSolver

./: Makefile  pyproject.toml  requirements.txt
google_captcha_solver/: __init__.py  recaptcha_solver_v2.py
tests/: test.py
